# cargo-release-test

./: .bumpversion.cfg  CHANGELOG.md  Cargo.toml  README.md  release.toml
cargo-release-test/: Cargo.toml
scripts/: bumpversion_old.sh  tag_release.sh  tag_release_old.sh
