[package]
name = "cargo-release-test"
version = "0.1.1"
edition = "2021"
description = "A cargo-release test"
license = "MIT"
documentation = ""
homepage = ""
repository = "https://example.com"
# release = "Current release: 0.1.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[package.metadata.release]
pre-release-replacements = [
  {file="../CHANGELOG.md", search="""
Unreleased
---------
""", replace="""
Unreleased
---------
	
-### Added
-### Changed
-### Fixed
	
{{version}}
----------
"""} ,
]
